--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
+    "react-upvote": "0.0.2",
     "zustand": "^3.6.9"
   },
   "devDependencies": {
